fixed overflow - optimized final page and carousel for mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,10 +65,13 @@
 
 @layer base {
   * {
-    @apply border-border custom-scrollbar;
+    @apply border-border custom-scrollbar m-0 p-0;
   }
   body {
     @apply dark bg-background text-foreground font-medium text-lg overflow-x-hidden  transition-transform duration-300;
+  }
+  main{
+    @apply overflow-x-hidden
   }
 }
 /* width */
